syntax = "proto3";

message Usuario {
    int32 idusuario = 1;
    string nombre = 2;
    string email = 3;
    string user = 4;
    string password = 5; 
    
}

message Username {
    string user = 1;
    string password = 2;  
}

message Response {
    string message = 1;
    int32 idusuario = 2;
}

message Nulo {
}

message Seguidores {
    string user = 1;
    string segui = 2;  
}

message seg {
    string s = 1;
}

message Listseguidos {
    string segui = 1;
}

service Usuarios {
    rpc Listo(Nulo) returns (Nulo);
    rpc TraerUsuario(Username) returns (Usuario);
    rpc AltaUsuario(Usuario) returns (Response);
    rpc SeguirUsuario (Seguidores) returns (Nulo);
    rpc EliminarSeguidor(Seguidores) returns (Nulo);
    rpc TraerSeguidores(seg) returns (stream Listseguidos);
}
